2008-05-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    Add interface to base class
	* garmon/plugin.py:
	    Add interface to base class
	    inherit from GObject
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/live_data/live_data.py:
        call Plugin.__init__


2008-05-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/plugin.py:
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* plugins/dtc_reader/dtc_reader.glade:
	* plugins/dtc_reader/dtc_reader.py:
	    change the way dtcs are read
	    

2008-05-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    tried to subclass IOBDDevice from GInterface but this causes
	    a segfault. Placed a comment above the class defintion.
	    

2008-05-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/live_data/live_data.py:
	    change GarmonApp.obd to GarmonApp.device


2008-05-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	    created an interface and a base class for OBD devices
	* plugins/dashboard/dashboard.py:
	    don't update _needle_gc when it is not yet created
	    

2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    Remove obsolete notify callbacks
	    check pspec.name in notify_needle_cb, not pspec 
	    

2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/live_data/live_data.py:
	    remove some unused functions


2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    don't try to determine the data type in port_io_watch_cb,
	    only: SEARCHING, NO DATA, ?, etc
	    

2008-04-29  Ben Van Mechelen  <me@benvm.be>

	* garmon/prefs.py:
	    don't raise an exception when a plugin tries to resgister
	    a preference that already exists.